--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@vercel/analytics": "^1.0.1",
     "chart": "^0.1.2",
     "chart.js": "^4.3.0",
+    "html2canvas": "^1.4.1",
     "mixpanel-browser": "^2.47.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "use-react-screenshot": "^3.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
